<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".ui.fragment.AboutFragment">

    <!--Application name -->
    <TextView
        android:id="@+id/about_application_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Application Name"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:text="@string/app_name" />

    <!--Application version -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Application version"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/about_app_verion"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <!--Description Heading-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Description heading"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/about_description_heading"/>

    <!--Description-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Description"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/about_description"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <!--Author Heading-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Author heading"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:text="@string/about_author_heading"/>

    <!--Author-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Author"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/about_author"/>

</LinearLayout>