<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="deck"
            type="es.uam.eps.dadm.cards.model.Deck" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".ui.fragment.DeckEditFragment">

        <TextView
            android:id="@+id/edit_deck_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/deck_edit_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deck_edit_name_placeholder"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_deck_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{deck.name}"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/deck_edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/edit_deck_cancel_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/edit_deck_accept_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/accept_green_button_color"
                android:enabled="false"
                android:text="@string/accept_button" />

            <Button
                android:id="@+id/edit_deck_delete_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/delete_red"
                android:enabled="false"
                android:text="@string/delete_button" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/automatic_test_deck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/generate_test_deck_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:enabled="false"
                android:text="@string/generate_test_deck_button" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


    </LinearLayout>

</layout>