<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:layout_marginVertical="10dp"
                android:text="@string/statistics_forecast_title"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/upcoming_this_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:text="@string/statistics_upcoming_next_week_text" />

                <TextView
                    android:id="@+id/upcoming_this_week_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/upcoming_this_week"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/grey"
                    android:text="@string/statistics_upcoming_next_week_desc"/>

                <TextView
                    android:id="@+id/upcoming_this_week_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    tools:text="X"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/upcoming_weeks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:text="@string/statistics_upcoming_next_weeks_text" />

                <TextView
                    android:id="@+id/upcoming_weeks_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/upcoming_weeks"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/grey"
                    android:text="@string/statistics_upcoming_next_weeks_desc"/>

                <TextView
                    android:id="@+id/upcoming_weeks_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    tools:text="X"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"/>
            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
